--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       </div>
       <div class="p-4 md:w-1/3">
         <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden">
-          <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="https://lh3.googleusercontent.com/proxy/5YtZl8rqJ9XZUHXjhIUNMd2NH7f3hLj3HlI75Ba5JUBBCzLTgNP5boXvJWg8Q4-5aV1cb0lSc_b0aoGfNkL7voi1LWMEjbdNB4CsFIgMdkbucau-dXY" alt="blog">
+          <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="https://wallpaperaccess.com/full/1535446.jpg" alt="blog">
           <div class="p-6">
             <h2 class="tracking-widest text-xs title-font font-medium text-gray-500 mb-1">CATEGORY</h2>
             <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Shooting Stars</h1>
